--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "npm": "10.9.0"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
