--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,25 @@
 {
-    "installCommand": "npm install --legacy-peer-deps",
-    "buildCommand": "npm run build",
     "version": 2,
     "builds": [
         {
-            "src": "dist/index.js",
+            "src": "api/index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "/dist/index.js"
+            "dest": "/api/index.js"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
+        }
+    ],
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
